Fix layout bug.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,12 +33,6 @@ p.create-user-agreement {
   margin-top: 1em;
 }
 
-i.button-icon {  
-  font-size: 1.6em;
-  vertical-align: middle;
-  margin-right: 0.2em;
-}
-
 i.button-icon-small {
   font-size: 1.2em;  
 }
